--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,31 @@
 <!doctype html>
 <html>
-<head>
-    <title>EIStracker</title>
-</head>
+  <head>
+    <title>My EIS Map</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+    <style>
+    /* THIS LOADED */
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 400px;
+        width: 100%
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    </head>
+    
 <body>
-
-EIStracker
-
-<hr>
 
 {% block content %}
   Put your body here.
