--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,11 @@
     <title>My EIS Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="/static/project_cards.css" rel="stylesheet">
     <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- // <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
 
     <style>
     /* THIS LOADED */
@@ -26,7 +28,11 @@
     </head>
     
 <body>
-
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    
 {% block content %}
   Put your body here.
 {% endblock %}
