--- a/static/project_cards.css
+++ b/static/project_cards.css
@@ -1,4 +1,4 @@
-<div class="row">
+/*<div class="row">
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
@@ -31,4 +31,8 @@
       </div>
     </div>
   </div>
-</div>
+</div>*/
+
+.card-body {
+
+}
