--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- css -->
     <link href="/static/project_cards.css" rel="stylesheet">
-    <!-- jquery -->
-    <!-- // <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+
 
     <style>
     /* THIS LOADED */
@@ -30,9 +30,11 @@
 <body>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- ajax -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <!-- bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    
+
 {% block content %}
   Put your body here.
 {% endblock %}
