--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,7 +6,9 @@
     <ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link" href="#about" data-tab="about">About EIStracker</a>
-    <div> Hello there</div>
+    <div> 
+      <text>Hello there</text>
+      </div>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#mymap">EIStracker Map</a>
