--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
     <!-- css -->
     <link href="/static/project_cards.css" rel="stylesheet">
 
