--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,12 +6,25 @@
     <ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link" href="#about" data-tab="about">About EIStracker</a>
-    <div> 
-      <text>Hello there</text>
-      </div>
+
+        <div id="text" class="justify-content-center align-items-center" style="width: 100px; margin: auto;">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+
+        <section id="about" class="about-section">
+        <div class="container" id="#about">
+            <div class="row">
+              <h1>About</h1>
+                <div class="col-xs-12">
+                    <div class="about">Lorem</div>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#mymap">EIStracker Map</a>
+
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#news">EIS News</a>
@@ -49,13 +62,14 @@
     </script>
 
     <!-- facebook button api -->
-    <script>window.facebook = (function(d, s, id) {
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
       js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
       fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
+    }(document, 'script', 'facebook-jssdk'));</script>
 
     <!-- diplays maps and project info for state -->
     <script src = '/static/states_with_projects.js'></script>
