--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,13 +1,27 @@
 {%extends 'base.html'%}
 {% block content %}
     
-    <h1>EIStracker</h1>
+
+<div class="jumbotron">
+  <h1>EIStracker</h1>      
+  <p>The only application tracking Environmental Impact Statements open for public comment.</p>
+</div>
 
     <ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link" href="#about" data-tab="about">About EIStracker</a>
+      <li class="nav-item">
+        <a class="nav-link" href="#about" data-tab="about">About EIStracker</a>
 
-        <div id="text" class="justify-content-center align-items-center" style="width: 100px; margin: auto;">
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#mymap">EIStracker Map</a>
+
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#news">EIS News</a>
+     </li>
+    </ul>
+
+    <div id="about" class="justify-content-center align-items-center" style="">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -15,22 +29,6 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 
-        <section id="about" class="about-section">
-        <div class="container" id="#about">
-            <div class="row">
-              <h1>About</h1>
-                <div class="col-xs-12">
-                    <div class="about">Lorem</div>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#mymap">EIStracker Map</a>
-
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#news">EIS News</a>
-  </li>
-</ul>
-    
     <div id="map"></div>
 
     <div class="projectData">
@@ -53,12 +51,14 @@
       return t;
       }(document, "script", "twitter-wjs"));
     </script>
+
 <!-- create functions to show maps/areas where code is repeated (DRY) -->
     <script> 
     $( document ).ready(function() {
     $('#map').show();
-    $('#twitter').hide();;
-});
+    $('#twitter').hide();
+    $('#about').hide();
+    });
     </script>
 
     <!-- facebook button api -->
