--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,20 +9,17 @@
 </div>
 
     <ul class="nav nav-tabs">
-     <li class="nav-item">
-        <a class="nav-link" href="#learn">Learn More</a>
-     </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#learn">What's an EIS?</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="#mymap">Open Projects Map</a>
-
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#news">EIS Newsfeed</a>
-     </li>
-
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="#about" data-tab="about">About EIStracker</a>
-
       </li>
     </ul>
 
