--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,7 +7,7 @@
   <p>The only web application tracking Environmental Impact Statements open for public comment.
   </p>
 </div>
-
+ <div class="container">
     <ul class="nav nav-tabs">
       <li class="nav-item">
         <a class="nav-link" href="#learn">What's an EIS?</a>
@@ -71,6 +71,7 @@
     <div id="map"></div>
 
     <div class="projectData"></div>
+    </div>
 
     <!-- twitter button api -->
     <script>window.twttr = (function(d, s, id) {
