--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -93,10 +93,10 @@
 <!-- create functions to show maps/areas where code is repeated (DRY) -->
     <script> 
     $( document ).ready(function() {
-    $('#map').show();
+    $('#map').hide();
     $('#twitter').hide();
     $('#about').hide();
-    $('#learn').hide();
+    $('#learn').show();
     });
     </script>
 
